# 2D-Smoke

./: .gitmodules  CMakeLists.txt  README.md
config/: example.yaml
include/: blas_wrapper.h  config.h  config_reader.h  interpolation.h  render2DSmoke.h  simulate2DSmoke.h  smoke_solver_2d.h  sparse_matrix.h  utils.h  viewer_2d.h
src/: main.cpp  render2DSmoke.cpp  simulate2DSmoke.cpp  smoke_solver_2d.cpp  viewer_2d.cpp
